fix: image block alignment with text when align is left or right (#292)
* chore: margin-bottom for left and right positions for image equal zero

* chore: left and right moved inside .block.image

--- a/src/theme/ItaliaTheme/Blocks/_imageBlock.scss
+++ b/src/theme/ItaliaTheme/Blocks/_imageBlock.scss
@@ -12,4 +12,8 @@
       }
     }
   }
+  &.left,
+  &.right {
+    margin-bottom: 0;
+  }
 }
